<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <!-- Title -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewTitle"/>

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintTitle"/>

    <!-- Singers -->
    <TextView
        android:id="@+id/tvSinger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewSinger"/>

    <EditText
        android:id="@+id/etSinger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintSinger"/>

    <!-- Year -->
    <TextView
        android:id="@+id/tvYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewYear"/>

    <EditText
        android:id="@+id/etYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintYear"/>

    <!-- Stars (Rating Bar) -->

    <TextView
        android:id="@+id/tvStars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewStars"/>

    <RadioGroup
        android:id="@+id/rgStars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"/>

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"/>

        <RadioButton
            android:id="@+id/rb3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3"/>

        <RadioButton
            android:id="@+id/rb4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4"/>

        <RadioButton
            android:id="@+id/rb5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnInsert"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnInsert"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/btnShowList"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnShowList"/>

    </LinearLayout>

</LinearLayout>